<resources>
    <string name="app_name">Домашнее задание</string>
    <string name="edit_label">Редактировать</string>
    <string name="app_exit_label">Выход</string>
    <string name="increase_label">+</string>
    <string name="decrease_label">—</string>
    <string name="cancel_label">Отмена</string>
    <string name="save_label">Сохранить</string>
    <string name="reset_label">Сбросить</string>
    <string name="description_image_ship">Изображение судна</string>
    <string name="app_add_label">Добавить</string>
    <string name="image_default_description">Изображение</string>
    <string name="label_television_diagonal">Диагональ:</string>
    <string name="default_value">——</string>
    <string name="label_television_resolution">Разрешение:</string>
    <string name="label_television_price">Цена:</string>
    <string name="televisions_list_title">Телевизоры</string>
    <string name="televisions_order_by_price_descending_title">Сортировка по убыванию цены</string>
    <string name="televisions_order_by_diagonal_ascending_title">Сортировка по возрастанию диагонали</string>
    <string name="label_id">id:</string>
    <string name="label_author_name">Автор:</string>
    <string name="authors_list_title">Авторы</string>
    <string name="categories_list_title">Категории</string>
    <string name="authors_statistic_list_title">Статистика по авторам</string>
    <string name="info_title">О приложении</string>
    <string name="label_category_name">Категория:</string>
    <string name="label_count_books">Количество книг:</string>
    <string name="label_developer_name">Разработчик:</string>
    <string name="developer_name">Горячев Михаил</string>
    <string name="label_developer_group">Группа:</string>
    <string name="developer_group">ПД011</string>
    <string name="label_development_year">Год разработки:</string>
    <string name="development_year">2023</string>
</resources>