<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.InfoActivity"
    android:orientation="vertical">


    <!-- Разработчик -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/OptionKeyFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_developer_name" />

        <TextView
            style="@style/OptionValueFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name" />

    </LinearLayout>

    <!-- Группа -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/OptionKeyFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_developer_group" />

        <TextView
            style="@style/OptionValueFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_group" />

    </LinearLayout>

    <!-- Год разработки -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/OptionKeyFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_development_year" />

        <TextView
            style="@style/OptionValueFirstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/development_year" />

    </LinearLayout>


</LinearLayout>